@@ -87,80 +87,6 @@ create_dialog1 (void)
 }
 
 GtkWidget*
-create_dialog2 (void)
-{
-  GtkWidget *dialog2;
-  GdkPixbuf *dialog2_icon_pixbuf;
-  GtkWidget *dialog_vbox2;
-  GtkWidget *fixed3;
-  GtkWidget *image9;
-  GtkWidget *label14;
-  GtkWidget *label15;
-  GtkWidget *dialog_action_area2;
-  GtkWidget *okbutton2;
-
-  dialog2 = gtk_dialog_new ();
-  gtk_window_set_title (GTK_WINDOW (dialog2), _("Install successful"));
-  gtk_window_set_resizable (GTK_WINDOW (dialog2), FALSE);
-  dialog2_icon_pixbuf = create_pixbuf ("sidux-meta.png");
-  if (dialog2_icon_pixbuf)
-    {
-      gtk_window_set_icon (GTK_WINDOW (dialog2), dialog2_icon_pixbuf);
-      gdk_pixbuf_unref (dialog2_icon_pixbuf);
-    }
-  gtk_window_set_type_hint (GTK_WINDOW (dialog2), GDK_WINDOW_TYPE_HINT_DIALOG);
-
-  dialog_vbox2 = GTK_DIALOG (dialog2)->vbox;
-  gtk_widget_show (dialog_vbox2);
-
-  fixed3 = gtk_fixed_new ();
-  gtk_widget_show (fixed3);
-  gtk_box_pack_start (GTK_BOX (dialog_vbox2), fixed3, TRUE, TRUE, 0);
-  gtk_container_set_border_width (GTK_CONTAINER (fixed3), 10);
-
-  image9 = create_pixmap (dialog2, "sidux-logo.png");
-  gtk_widget_show (image9);
-  gtk_fixed_put (GTK_FIXED (fixed3), image9, 0, 0);
-  gtk_widget_set_size_request (image9, 480, 168);
-
-  label14 = gtk_label_new (_("Installation successful"));
-  gtk_widget_show (label14);
-  gtk_fixed_put (GTK_FIXED (fixed3), label14, 16, 168);
-  gtk_widget_set_size_request (label14, 470, 22);
-
-  label15 = gtk_label_new (_("http://sidux.com"));
-  gtk_widget_show (label15);
-  gtk_fixed_put (GTK_FIXED (fixed3), label15, 16, 192);
-  gtk_widget_set_size_request (label15, 470, 22);
-  gtk_label_set_single_line_mode (GTK_LABEL (label15), TRUE);
-
-  dialog_action_area2 = GTK_DIALOG (dialog2)->action_area;
-  gtk_widget_show (dialog_action_area2);
-  gtk_button_box_set_layout (GTK_BUTTON_BOX (dialog_action_area2), GTK_BUTTONBOX_END);
-
-  okbutton2 = gtk_button_new_with_mnemonic ("OK");
-  gtk_widget_show (okbutton2);
-  gtk_dialog_add_action_widget (GTK_DIALOG (dialog2), okbutton2, GTK_RESPONSE_OK);
-  GTK_WIDGET_SET_FLAGS (okbutton2, GTK_CAN_DEFAULT);
-
-  g_signal_connect ((gpointer) okbutton2, "clicked",
-                    G_CALLBACK (gtk_main_quit),
-                    NULL);
-
-  /* Store pointers to all widgets, for use by lookup_widget(). */
-  GLADE_HOOKUP_OBJECT_NO_REF (dialog2, dialog2, "dialog2");
-  GLADE_HOOKUP_OBJECT_NO_REF (dialog2, dialog_vbox2, "dialog_vbox2");
-  GLADE_HOOKUP_OBJECT (dialog2, fixed3, "fixed3");
-  GLADE_HOOKUP_OBJECT (dialog2, image9, "image9");
-  GLADE_HOOKUP_OBJECT (dialog2, label14, "label14");
-  GLADE_HOOKUP_OBJECT (dialog2, label15, "label15");
-  GLADE_HOOKUP_OBJECT_NO_REF (dialog2, dialog_action_area2, "dialog_action_area2");
-  GLADE_HOOKUP_OBJECT (dialog2, okbutton2, "okbutton2");
-
-  return dialog2;
-}
-
-GtkWidget*
 create_package_info (void)
 {
   GtkWidget *package_info;
